## Copyright (c) 2018 Yannic Bonenberger and others.
##
## This program and the accompanying materials are made available under the
## terms of the Eclipse Public License v. 2.0 which is available at
## http://www.eclipse.org/legal/epl-2.0,
## or the Eclipse Distribution License v. 1.0 which is available at
## http://www.eclipse.org/org/documents/edl-v10.php.

licenses(["reciprocal"])  # Eclipse Public License - v2.0

java_test(
    name = "IntegrationTest",
    srcs = [
        "IntegrationTest.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":LogMessageAccumulator",
        "//java/org/eclipse/lsp4j/jsonrpc",
    ],
)

java_test(
    name = "LauncherTest",
    srcs = [
        "LauncherTest.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
        "@gson//jar",
    ],
)

java_library(
    name = "LogMessageAccumulator",
    testonly = True,
    srcs = [
        "LogMessageAccumulator.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@junit//jar",
    ],
)

java_test(
    name = "RemoteEndpointTest",
    srcs = [
        "RemoteEndpointTest.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":LogMessageAccumulator",
        "//java/org/eclipse/lsp4j/jsonrpc",
    ],
)
