## Copyright (c) 2018 Yannic Bonenberger and others.
##
## This program and the accompanying materials are made available under the
## terms of the Eclipse Public License v. 2.0 which is available at
## http://www.eclipse.org/legal/epl-2.0,
## or the Eclipse Distribution License v. 1.0 which is available at
## http://www.eclipse.org/org/documents/edl-v10.php.

licenses(["reciprocal"])  # Eclipse Public License - v2.0

java_test(
    name = "EndpointsTest",
    srcs = [
        "EndpointsTest.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
    ],
)
