## Copyright (c) 2018 Yannic Bonenberger and others.
##
## This program and the accompanying materials are made available under the
## terms of the Eclipse Public License v. 2.0 which is available at
## http://www.eclipse.org/legal/epl-2.0,
## or the Eclipse Distribution License v. 1.0 which is available at
## http://www.eclipse.org/org/documents/edl-v10.php.

licenses(["reciprocal"])  # Eclipse Public License - v2.0

java_test(
    name = "CollectionTest",
    srcs = [
        "CollectionTest.java",
    ],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
        "@gson//jar",
    ],
)

java_test(
    name = "EitherTest",
    srcs = [
        "EitherTest.java",
    ],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
        "@gson//jar",
    ],
)

java_test(
    name = "MessageJsonHandlerTest",
    srcs = [
        "MessageJsonHandlerTest.java",
    ],
    deps = [
        ":MyClass",
        ":MyClassList",
        ":MyEnum",
        "//java/org/eclipse/lsp4j/jsonrpc",
        "@gson//jar",
    ],
)

java_test(
    name = "MessageProducerTest",
    srcs = [
        "MessageProducerTest.java",
    ],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
    ],
)

java_library(
    name = "MyClass",
    srcs = [
        "MyClass.java",
    ],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
    ],
)

java_library(
    name = "MyClassList",
    srcs = [
        "MyClassList.java",
    ],
    deps = [
        ":MyClass",
        "//java/org/eclipse/lsp4j/jsonrpc",
    ],
)

java_library(
    name = "MyEnum",
    srcs = [
        "MyEnum.java",
    ],
)

java_test(
    name = "ThrowableTest",
    srcs = [
        "ThrowableTest.java",
    ],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
        "@gson//jar",
    ],
)

java_test(
    name = "TypeUtilsTest",
    srcs = [
        "TypeUtilsTest.java",
    ],
    deps = [
        "//java/org/eclipse/lsp4j/jsonrpc",
        "@gson//jar",
    ],
)
